--- a/.gitignore
+++ b/.gitignore
@@ -1,5 +1,6 @@
-bin/
-obj/
-/packages/
-riderModule.iml
-/_ReSharper.Caches/
+EvoWeb/bin/
+EvoWeb/obj/
+EvoWeb/packages/
+EvoWeb/riderModule.iml
+EvoWeb/_ReSharper.Caches/
+.idea/
