--- a/EvoWeb/appsettings.json
+++ b/EvoWeb/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "ConnectionStrings": {
-    "Db": "Host=172.17.0.1;Username=postgres;Password=admin;Database=bazafour;"
+    "Db": "Host=172.17.0.1;Username=postgres;Password=admin;Database=EvoWebDataBase;"
   }
 }
